# Tableturfer

./: README.md
parser/: Cargo.toml  README.md
parser/input/: .gitignore
parser/input/maps/: CenterHole.json  Cross.json  Rectangle.json  SShape.json  SmallSquare.json  Square.json  WDiamond.json  Zigzag.json
parser/lib/byml/: Cargo.toml  LICENSE  README.md
parser/lib/byml/src/: lib.rs  parse.rs
parser/lib/byml/test/: A-1_Static.mubin.byml  ActorInfo.product.byml
parser/lib/msbt/: Cargo.toml
parser/lib/msbt/src/: builder.rs  counter.rs  error.rs  lib.rs  section.rs  traits.rs  updater.rs
parser/lib/msbt/src/section/: ato1.rs  atr1.rs  lbl1.rs  nli1.rs  tsy1.rs  txt2.rs
parser/src/: lib.rs  main.rs
server/: Cargo.toml  README.md
server/cfg/: .gitignore  config_example.toml  defaults.toml
server/src/: app_config.rs  game.rs  main.rs  matrix.rs  position.rs  socket.rs
server/src/game/: card.rs  cards.json  map.rs  maps.json  move_validator.rs  squares.rs  state.rs  team.rs
server/src/matrix/: index.rs  iter.rs  serde.rs
server/src/socket/: action_handler.rs  close_code.rs  messages.rs  room_listener.rs  room_store.rs
web/: .eslintrc.json  app.vue  jest.config.ts  nuxt.config.ts  package.json  tsconfig.json
web/assets/: maps.json  style-common.scss
web/components/: Alert.vue  Badge.vue  Card.vue  CardPreview.vue  CardSquare.vue  CardSquarePreview.vue  DataRow.vue  Overlay.vue  OverlayBody.vue  PageNav.vue  PlayerNameInput.vue  TtButton.vue  TtInput.vue  TtLinkButton.vue  TtToggleButton.vue  UserSettingsOverlay.vue
web/composables/: UseSwipeCardMovement.ts
web/data/: Constants.ts  DefaultDeck.ts
web/helpers/: ActiveCardHelper.ts  ArrayHelper.ts  BoardHelper.ts  Cards.ts  LocalStorageHelper.ts  Maps.ts  SquareHelper.ts  StringHelper.ts
web/lang/: en.json  en.ts
web/layouts/: NoPullToRefresh.vue  default.vue
web/modules/: CardI18nModule.ts
web/pages/: decks.vue  index.vue  play.vue  sandbox.vue
web/plugins/: LongPressDirectivePlugin.client.ts  LongPressDirectivePlugin.ts  PiniaI18nPlugin.ts
web/stores/: ActiveCardStore.ts  CurrentMoveStore.ts  DeckListStore.ts  DeckStore.ts  GameBoardStore.ts  GameStateStore.ts  MoveStore.ts  RoomStore.ts  UserSettingsStore.ts
web/types/: ActiveCard.ts  Card.ts  CardRarity.ts  CardRotation.ts  CardSquareType.ts  DeckList.ts  GameMap.ts  LocalStorage.ts  MapSquareType.ts  PiniaI18nPlugin.ts  PlayerTeam.ts  Position.ts  Socket.ts
(+109 files in other folders)
