[package]
name = "tableturfer-data-parser"
version = "0.1.0"
edition = "2021"

[dependencies]
byml = { path = "lib/byml" }
msbt = { path = "lib/msbt" }
zstd = "0.12"
itertools = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sarc = { version = "1.1", default-features = false }
strum = { version = "0.24", features = ["derive"] }
