[package]
name = "tableturfer-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.6.0-rc.4", features = ["ws"] }
futures = "0.3"
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["util"] }

env_logger = "0.9"
log = "0.4"
config = { version = "0.13.2", features = ["toml"] }
serde = "1.0.147"
serde_json = "1.0"
uuid = { version = "1.2", features = ["v4", "fast-rng", "serde"] }
