[package]
name = "tableturfer-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.6.0-rc.4", features = ["ws"] }
futures = "0.3"
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["util"] }

serde = "1.0.147"
serde_json = "1.0"
serde_repr = "0.1"

env_logger = "0.9"
log = "0.4"
config = { version = "0.13.2", features = ["toml"] }
uuid = { version = "1.2", features = ["v4", "fast-rng", "serde"] }
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
itertools = "0.10.5"
strum = { version = "0.24", features = ["derive"] }
